# MDPilot

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  flow.py  main.py  nodes.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
benchmarks/: generate_trpcage_planted.py
benchmarks/tasks/: trpcage_convergence.yaml
docs/: activity-log.md  architecture.md  design.md  related_work.md
src/mdpilot/adapters/: openmm_runner.py
src/mdpilot/diagnostics/: autocorrelation.py  block_averaging.py  report.py
src/mdpilot/orchestrator/: loop.py  scientist.py
tests/integration/: test_loop_live.py  test_milestone1_live.py  test_scientist_live.py
tests/unit/: test_autocorrelation.py  test_block_averaging.py  test_report.py  test_scientist.py
utils/: analyze_md.py  call_llm.py  search_papers.py
